Getting things in shape

--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,16 @@
 ###########
 # site.title
 
-title:    'Planet Jekyll Starter Theme'
-subtitle: 'Another Minimalistic Static Site Quick Starter Theme'
-
+title:    'Columbia PILF'
+subtitle: 'Public Interest Law Foundation'
 
 ## note:
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
 #    note: for root path use empty string e.g. '' - do NOT include trailing slash e.g. /
 
-path:  '/jekyll-starter-theme'
-url:   'http://planetjekyll.github.io/jekyll-starter-theme'
+path:  ''
+url:   'http://columbia-pilf.github.io'
 
 
 #########################
@@ -19,6 +18,12 @@ url:   'http://planetjekyll.github.io/jekyll-starter-theme'
 
 markdown: kramdown
 
-exclude:
-- README.md
+exclude: ['README.md']
 
+collections:
+  pages:
+    output: true
+    permalink: /:path/
+  main_pages:
+    output: true
+    permalink: /:path/
